// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`smoke: full scripted-run rendering contract > locks the frame at narrow width (44 columns) 1`] = `
"╭─ Sherlock — evidence collection agent ─╮
│             Welcome back!              │
│                                        │
│              .-~~~~~~~~~~-.            │
│             / . , .  . , . \\           │
│            ;   ___    ___   ;          │
│            |  '   '~~'   '  |          │
│            | .-~~~-..-~~~-. |          │
│           |  (( ◉ ))(( ◉ ))  |         │
│            ; '-___-''-___-' ;          │
│            \\  '-. \\  / .-'  /          │
│         ,__  \\  '~~\\/~~'  /  __,       │
│         \\   '-.   ░░░░   .-'   /       │
│          \\     \\ ░▒▒▒▒░ /     /        │
│           \\     ;░▒▒▒▒░;     /         │
│            \\    |▒▒▓▓▒▒|    /          │
│             '~~~|      |~~~'           │
╰────────────────────────────────────────╯


 ▸ Find Acme Corp's Series B investors and
 save them to a CSV

  I'll start with recent funding coverage,
  then confirm the names against the primary
   filing.

 ● Opening
 techcrunch.com/2026/05/14/acme-series-b  ✓

  The coverage is up. Reading the page for
  investor names.

 ● Reading the page  ✓

  The article names three investors —
  Meridian Growth, Halcyon Partners, and
  Northgate Capital. The filing should
  confirm the amounts.

 ● Opening
 sec.gov/cgi-bin/browse-edgar?company=acme
 ✓

 ● Clicking e42  ✗

  The link moved after the page settled —
  re-inspecting, then saving the confirmed
  list as evidence.

 ● Reading the page  ✓

 ◆ Evidence saved → investors.csv

  Acme's Series B was led by Meridian Growth
   with participation from Halcyon Partners
  and Northgate Capital; the three names and
   their filing references are saved in
  investors.csv.

 ✓ Brewed in 42s · 18.7k tokens
   ◆ artifacts/investors.csv · 182 B ·
 requested output
   runs/2026-08-11_10-15-02_find-acme-corp-s
 eries-b_demo
╭──────────────────────────────────────────╮
│ ›                                        │
╰──────────────────────────────────────────╯"
`;

exports[`smoke: full scripted-run rendering contract > locks the frame at normal width (80 columns) 1`] = `
"╭─ Sherlock — evidence collection agent ───────────────────────╮
│                        Welcome back!                         │
│                                                              │
│                         .-~~~~~~~~~~-.                       │
│                        / . , .  . , . \\                      │
│                       ;   ___    ___   ;                     │
│                       |  '   '~~'   '  |                     │
│                       | .-~~~-..-~~~-. |                     │
│                      |  (( ◉ ))(( ◉ ))  |                    │
│                       ; '-___-''-___-' ;                     │
│                       \\  '-. \\  / .-'  /                     │
│                    ,__  \\  '~~\\/~~'  /  __,                  │
│                    \\   '-.   ░░░░   .-'   /                  │
│                     \\     \\ ░▒▒▒▒░ /     /                   │
│                      \\     ;░▒▒▒▒░;     /                    │
│                       \\    |▒▒▓▓▒▒|    /                     │
│                        '~~~|      |~~~'                      │
╰──────────────────────────────────────────────────────────────╯


 ▸ Find Acme Corp's Series B investors and save them to a CSV

  I'll start with recent funding coverage, then confirm the names against the
  primary filing.

 ● Opening techcrunch.com/2026/05/14/acme-series-b  ✓

  The coverage is up. Reading the page for investor names.

 ● Reading the page  ✓

  The article names three investors — Meridian Growth, Halcyon Partners, and
  Northgate Capital. The filing should confirm the amounts.

 ● Opening sec.gov/cgi-bin/browse-edgar?company=acme  ✓

 ● Clicking e42  ✗

  The link moved after the page settled — re-inspecting, then saving the
  confirmed list as evidence.

 ● Reading the page  ✓

 ◆ Evidence saved → investors.csv

  Acme's Series B was led by Meridian Growth with participation from Halcyon
  Partners and Northgate Capital; the three names and their filing references
  are saved in investors.csv.

 ✓ Brewed in 42s · 18.7k tokens
   ◆ artifacts/investors.csv · 182 B · requested output
   runs/2026-08-11_10-15-02_find-acme-corp-series-b_demo
╭──────────────────────────────────────────────────────────────────────────────╮
│ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`smoke: full scripted-run rendering contract > locks the waiting composer state 1`] = `
"╭─ Sherlock — evidence collection agent ───────────────────────╮
│                        Welcome back!                         │
│                                                              │
│                         .-~~~~~~~~~~-.                       │
│                        / . , .  . , . \\                      │
│                       ;   ___    ___   ;                     │
│                       |  '   '~~'   '  |                     │
│                       | .-~~~-..-~~~-. |                     │
│                      |  (( ◉ ))(( ◉ ))  |                    │
│                       ; '-___-''-___-' ;                     │
│                       \\  '-. \\  / .-'  /                     │
│                    ,__  \\  '~~\\/~~'  /  __,                  │
│                    \\   '-.   ░░░░   .-'   /                  │
│                     \\     \\ ░▒▒▒▒░ /     /                   │
│                      \\     ;░▒▒▒▒░;     /                    │
│                       \\    |▒▒▓▓▒▒|    /                     │
│                        '~~~|      |~~~'                      │
╰──────────────────────────────────────────────────────────────╯


 ▸ Find Acme Corp's Series B investors and save them to a CSV

  I'll start with recent funding coverage, then confirm the names against the
  primary filing.

 ● Opening techcrunch.com/2026/05/14/acme-series-b  ✓

  The coverage is up. Reading the page for investor names.

 ● Reading the page  ✓

  The article names three investors — Meridian Growth, Halcyon Partners, and
  Northgate Capital. The filing should confirm the amounts.

 ● Opening sec.gov/cgi-bin/browse-edgar?company=acme  ✓

 ● Clicking e42  ✗

  The link moved after the page settled — re-inspecting, then saving the
  confirmed list as evidence.

 ● Reading the page  ✓

 ◆ Evidence saved → investors.csv

  Acme's Series B was led by Meridian Growth with participation from Halcyon
  Partners and Northgate Capital; the three names and their filing references
  are saved in investors.csv.

 ✓ Brewed in 42s · 18.7k tokens
   ◆ artifacts/investors.csv · 182 B · requested output
   runs/2026-08-11_10-15-02_find-acme-corp-series-b_demo
╭──────────────────────────────────────────────────────────────────────────────╮
│ › (waiting for agent…)                                                       │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
